--- a/Gubkinskii.mw
+++ b/Gubkinskii.mw
@@ -8,7 +8,7 @@
  | Eläjiden lugu = 27,238
  | Voz' = 2017
  | Pind = 35
- | Fail = Gubkinskiy 2013 09.jpg
+ | Fail = Губкинский.jpg
  | Pämez' = Andrei Garanin<br />(reduku 2018—)
  | Telefonkod = +7-34936-xx-xxx
  | Avtokod = 89
@@ -27,11 +27,22 @@ Lidn sijadase [[Päkupur]]-jogen hural randal (542 km pitte, [[Pur]]an hura jogi
 Gubkinskii om lidnümbrikon üks'jäine eländpunkt.
 
 == Eläjad ==
-Vn 2010 kaiken Venäman rahvahanlugemižen mödhe eläjiden lugu oli 23 335 ristitud. Kaikiš suremb lidnan ristitišt oli 27 346 eläjad vl 2016. Ortodoksižen hristanuskondan pühäpert' i islaman mečet' oma olmas lidnas.
+Vn 2010 kaiken Venäman rahvahanlugemižen mödhe eläjiden lugu oli 23 335 ristitud. Kaikiš suremb lidnan ristitišt oli 27 346 eläjad vl 2016. [[Ortodoksine hristanuskond|Ortodoksižen hristanuskondan]] pühäpert' i [[islam]]an mečet' oma olmas lidnas.
 
 Rahvahad (enamba 0,8% vl 2010): [[venälaižed]] — 60,8%, [[ukrainalaižed]] — 12,0%, [[totarlaižed]] — 7,1%, [[baškiralaižed]] — 3,5%, [[vaugedvenälaižed]] — 2,4%, [[kumikad]] — 1,7%, [[moldovalaižed]] — 1,6%, [[azerbaidžanlaižed]] — 1,0%, [[čuvašalaižed]] — 0,9%, toižed rahvahad — 7,9%, rahvahuden ozutandata — 1,1%.
 
 [[Muravlenko]]n äiprofil'žen kolledžan filial om professionaližen opendusen aluzkundaks.
+
+== Galerei ==
+<gallery mode="packed" heights="125px">
+Gubkinskiy 2013 09.jpg|Ird lidnas (2013)
+Gubkinskiy 2013 08.jpg|Piccerii vl 2013
+УдГУ Губкинский.jpg|Udmurtijan valdkundaližen universitetan filial Gubkinskii-lidnas (2015)
+Purpe Railway Station 02.jpg|Purpe-žilon raudtestancijanno vl 2013
+</gallery>
+
+== Homaičendad ==
+<references />
 
 == Irdkosketused ==
 * [http://duma.gubadm.ru/ Lidnan Duman oficialine sait (''duma.gubadm.ru:441'').] {{ref-ru}}
