--- a/Muravlenko.mw
+++ b/Muravlenko.mw
@@ -8,13 +8,12 @@
  | Eläjiden lugu = 32,540
  | Voz' = 2017
  | Pind =
- | Fail = 15.11.2007 - panoramio (1).jpg
+ | Fail = Муравленко август 2013 после дождя - panoramio.jpg
  | Pämez' = Aleksandr Podoroga<br />(semendku 2012—)
  | Telefonkod = +7-34938-xx-xxx
  | Avtokod = 89
  | Aigvö = [[UTC]]+5 ([[MSK]]+2)
 }}
-[[Fail:Офис «Газпромнефть-Муравленко».jpg|thumb|left|250px|«Gazpromneft'-Muravlenko»-palakundan kontor Leninan-irdal.]]
 '''Muravlenko''' ([[venäkel'|ven]]., [[totaran kel'|tot]]. i {{lang-uk|Муравленко}}) om [[Venäma]]n lidn da lidnümbrik [[Jamalan Nenciden avtonomine ümbrik|Jamalan Nenciden avtonomižen ümbrikon]] suves. Se om ümbärtud [[Puran rajon]]an territorijal.
 
 == Istorii ==
@@ -28,11 +27,23 @@ Lidn sijadase [[Päkupur]]-jogen basseinas ([[Pur]]an hura joginišk), 120 m ü.
 Muravlenko om lidnümbrikon üks'jäine eländpunkt.
 
 == Eläjad ==
-Vn 2010 kaiken Venäman rahvahanlugemižen mödhe eläjiden lugu oli 33 391 ristitud. Kaikiš suremb lidnan ristitišt oli 37 256 eläjad vl 2009. Ortodoksižen hristanuskondan Spasan Toižetamižen pühäpert' (om saudud vll 1996−2001) i islaman mečet' (vspäi 2006) oma olmas lidnas.
+Vn 2010 kaiken Venäman rahvahanlugemižen mödhe eläjiden lugu oli 33 391 ristitud. Kaikiš suremb lidnan ristitišt oli 37 256 eläjad vl 2009. [[Ortodoksine hristanuskond|Ortodoksižen hristanuskondan]] Spasan Toižetamižen pühäpert' (om saudud vll 1996−2001) i [[islam]]an mečet' (vspäi 2006) oma olmas lidnas.
 
 Rahvahad (enamba 1% vl 2010): [[venälaižed]] — 58,1%, [[ukrainalaižed]] — 12,1%, [[totarlaižed]] — 9,7%, [[azerbaidžanlaižed]] — 4,1%, [[baškiralaižed]] — 3,8%, [[vaugedvenälaižed]] — 2,1%, [[čuvašalaižed]] — 1,0%, toižed rahvahad — 9,1%.
 
 Muravlenkon äiprofil'ne kolledž om professionaližen opendusen aluzkundaks.
+
+== Galerei ==
+<gallery mode="packed" heights="125px">
+Муравленко январь 2013 Многопрофильный лицей - panoramio.jpg|Äiprofil'ne licei (2012)
+Муравленко июль 2013 - panoramio (4).jpg|Sündun Toižetamižen jumalanpert', vn 2013 nägu
+Муравленко май 2014 - panoramio (1).jpg|Islaman «Nur»-pühäpert', vn 2013 nägu
+Офис «Газпромнефть-Муравленко».jpg|«Gazpromneft'-Muravlenko»-palakundan kontor Leninan-irdal
+Муравленко август 2013 - panoramio (14).jpg|«[[Sberbank|Sberbank:an]]» palakund vl 2013
+</gallery>
+
+== Homaičendad ==
+<references />
 
 == Irdkosketused ==
 * [http://muravlenko.yanao.ru/ Municipaližen «Muravlenko-lidn»-ühtnikan tobmuden oficialine sait (''muravlenko.yanao.ru'').] {{ref-ru}}
