Replacing Wappen_Fellbach.svg with [[File:DEU_Fellbach_COA.svg]] (by [[:c:User:CommonsDelinker|CommonsDelinker]] because: [[:c:COM:FR|File renamed]]: Harmonizing refered to the most German COA).

--- a/Fell'bah.mw
+++ b/Fell'bah.mw
@@ -1,6 +1,6 @@
 {{Eländpunkt
  | Nimi = Fell'bah<br />Fellbach
- | Lidnanznam = Wappen Fellbach.svg
+ | Lidnanznam = DEU Fellbach COA.svg
  | Flag = 
  | Lidnanznam text = Fell'bahan lidnanznam
  | Flag text = 
