--- a/Fell'bah.mw
+++ b/Fell'bah.mw
@@ -1,9 +1,9 @@
 {{Eländpunkt
  | Nimi = Fell'bah<br />Fellbach
  | Lidnanznam = DEU Fellbach COA.svg
- | Flag = 
+ | Flag = Banner Fellbach.svg
  | Lidnanznam text = Fell'bahan lidnanznam
- | Flag text = 
+ | Flag text = Fell'bahan flag
  | Valdkund = Saksanma
  | Eläjiden lugu = 45,783
  | Voz' = 2017-01-01
