--- a/Nauman_kirj.mw
+++ b/Nauman_kirj.mw
@@ -1,3 +1,4 @@
+[[Fail:Naum e Nínive destruída (Biblioteca Nacional de Portugal ALC.455, fl.300).png|thumb|right|250px|''Naum i Ninevijan murenduz'', pen' kuva Alkobasan Jumalanmaman jumalankodin Biblijaspäi, 1220-nded voded, Portugalii]]
 '''Nauman kirj''' ({{lang-he|נַחוּם}} ''Nahum'', {{lang-el|Ναοὺμ}} ''Naoum'', {{lang-la|Nahum}}, {{lang-ru|Книга Наума}}) om evrejan [[Tanah]]-biblijan kirj [[Neviim]]-jagusespäi («endustajad»), hristanuskondan 34. [[Vanh Zavet|Vanhan Zavetan]] kirj.
 
 Kirj om sätud [[Naum (endustai)|Naum]]-endustajal 7. voz'sadal EME vai sen aigemba. Original om kirjutadud evrejan kelel.
