--- a/Avvakuman_kirj.mw
+++ b/Avvakuman_kirj.mw
@@ -1,3 +1,4 @@
+[[Fail:Habacuc e Deus (Biblioteca Nacional de Portugal ALC.455, fl.301).png|thumb|right|250px|''Avvakum i Jumal'']]
 '''Avvakuman kirj''' ({{lang-he|חֲבַקּוּק}} ''Havakuk'', {{lang-el|Αμβακοὺμ}} ''Ambakoum'', {{lang-la|Habacuc}}, {{lang-ru|Книга Аввакума}}) om evrejan [[Tanah]]-biblijan pala Neviim-jagusespäi (Endustajad) i [[hristanuskond]]an 35. [[Vanh Zavet|Vanhan Zavetan]] kirj.
 
 Kirj om sätud Avvakum-endustajal i starinoičeb 7. voz'sadan EME lopun — 6. voz'sadan EME zavodindan aigtegoiš. Kogoneb kahtes palaspäi, ezmäine pala jagase kaks'haze.
