--- a/Mihejan_kirj.mw
+++ b/Mihejan_kirj.mw
@@ -1,3 +1,4 @@
+[[Fail:Initial U - An Angel before Micah - Google Art Project.jpg|thumb|right|250px|Mihejan kirjan zavodind 1270-nziden voziden Biblijas, franciž-flamandine region. Kuvas: ''Angel näguse Mihejale''.]]
 '''Mihejan (Mikan) kirj''' ({{lang-he|מִיכָה}} ''Mihá'', {{lang-el|Μιχαίας}} ''Miksaias'', {{lang-la|Michaeae}}, {{lang-ru|Книга пророка Михея}}) om evrejan [[Tanah]]-biblijan kudenz' kirj Neviim-jagusespäi i [[hristanuskond]]an [[Vanh Zavet|Vanhan Zavetan]] 33. kirj.
 
 Original om kirjutadud klassižel evrejan kelel. Kirj om sätud [[Mihei (endustai)|Mihei]]-endustajal, hän tegi pühäpaginoid 8.-7. voz'sadoil EME. Säduz kogoneb seičemes jagusespäi.
