--- a/Sofonian_kirj.mw
+++ b/Sofonian_kirj.mw
@@ -1,3 +1,4 @@
+[[Fail:Sophonie s'adressant au peuple.jpg|thumb|right|250px|''Sofonia oigendase rahvahan polehe'', 16. voz'sadan francine Biblii]]
 '''Sofonian kirj''' ({{lang-he|צְפַנְיָה}} ''Cfanja'', {{lang-el|Σοφονίας}} ''Sofonias'', {{lang-la|Sophoniae}}, {{lang-ru|Книга Софонии}}) om evrejan [[Tanah]]-biblijan kirj Neviim-jagusespäi i [[hristanuskond]]an 36. [[Vanh Zavet|Vanhan Zavetan]] kirj.
 
 Original om sätud evrejan kelel. Kirj kogoneb koumes jagusespäi. Tegii om [[Sofonia (endustai)|Sofonia]]-endustai, eli 7. voz'sadal EME.
