--- a/Uz'_Nikkeri.mw
+++ b/Uz'_Nikkeri.mw
@@ -13,7 +13,7 @@
  | Telefonkod = +597
  | Aigvö = [[UTC]]−3
 }}
-'''Uz' Nikkeri''' ({{lang-nl|Nieuw-Nickerie}}) om lidn [[Surinam]]an lodehližes čogas. Se om valdkundan koumanz' lidn eläjiden lugun mödhe, [[Nikkeri]]-ümbrikon administrativine keskuz.
+'''Uz' Nikkeri''' ({{lang-nl|Nieuw-Nickerie}} [ˈniu̯ niˈkeːri]) om lidn [[Surinam]]an lodehližes čogas. Se om valdkundan koumanz' lidn eläjiden lugun mödhe, [[Nikkeri]]-ümbrikon administrativine keskuz.
 
 Lidn sijadase Nikkeri-jogensun i [[Atlantine valdmeri|Atlantižen valdmeren]] randal. Ehtatim ühtenzoitab [[Gajan]]an territorijanke. Torguz i adivpertid ratas lidnas. [[Banan]]iden i [[ris]]an kazvatand ümbrištos.
 
