--- a/Uz'_Nikkeri.mw
+++ b/Uz'_Nikkeri.mw
@@ -15,9 +15,18 @@
 }}
 '''Uz' Nikkeri''' ({{lang-nl|Nieuw-Nickerie}} [ˈniu̯ niˈkeːri]) om lidn [[Surinam]]an lodehližes čogas. Se om valdkundan koumanz' lidn eläjiden lugun mödhe, [[Nikkeri]]-ümbrikon administrativine keskuz.
 
-Lidn sijadase Nikkeri-jogensun i [[Atlantine valdmeri|Atlantižen valdmeren]] randal. Ehtatim ühtenzoitab [[Gajan]]an territorijanke. Torguz i adivpertid ratas lidnas. [[Banan]]iden i [[ris]]an kazvatand ümbrištos.
+== Istorii ==
+Plantacijoiden šingotajad sirdaškanziba Sures Britanijaspäi nügüdläižen lidnan tahoiže britanižen tobmuden aigan 18. voz'sadal. Uz' Nikkerin aluz om pandud vl 1879 ümbrikon vanhan Uz' Rotterdam-keskusen murendusen jäl'ghe sur'vedel. Eländpunkt planiruihe pol'deral eziauguižešti vl 1869, no sirtihe sidä korktembaha maha edesižes. Nikkeri-nimituz libub sijaližen heimon vn 1596 mainitesespäi (''Neekeari'') Teenstra-matkadajal ezimeletaden.
+
+Torguz i adivpertid ratas lidnas. [[Banan]]iden i [[ris]]an kazvatand ümbrištos.
+
+== Geografijan andmused ==
+Lidn sijadase Nikkeri-jogensun i [[Atlantine valdmeri|Atlantižen valdmeren]] randal. Ehtatim ühtenzoitab [[Gajan]]an territorijanke.
 
 Vl 2012 lidnan eläjiden lugu oli 12 818 ristitud.
+
+== Homaičendad ==
+<references />
 
 {{Commons|Category:Nieuw-Nickerie}}
 
