*Empty MediaWiki Message*

--- a/Uz'_Nikkeri.mw
+++ b/Uz'_Nikkeri.mw
@@ -23,6 +23,8 @@ Torguz i adivpertid ratas lidnas. [[Banan]]iden i [[ris]]an kazvatand ümbrišto
 == Geografijan andmused ==
 Lidn sijadase Nikkeri-jogensun i [[Atlantine valdmeri|Atlantižen valdmeren]] randal. Ehtatim ühtenzoitab [[Gajan]]an territorijanke.
 
+Klimat om vihmmecoiden tropine.
+
 Vl 2012 lidnan eläjiden lugu oli 12 818 ristitud.
 
 == Homaičendad ==
