--- a/Tarkosale.mw
+++ b/Tarkosale.mw
@@ -8,7 +8,7 @@
  | Eläjiden lugu = 21,665
  | Voz' = 2017
  | Pind = 43.37
- | Fail = Администрация Пуровского района (Ямало-Ненецкий автономный округ).jpg
+ | Fail = Магазин Северная бухта, shop north bay - panoramio.jpg
  | Pämez' = Andrei Nesteruk<br />(tal'vku 2015—)
  | Telefonkod = +7-34997-xx-xxx
  | Avtokod = 89
@@ -27,9 +27,21 @@ Lidn sijadase Päkupur i Aivasedapur-jogiden keskes, Päkupur-jogen oiktal randa
 Tarkosale om lidnankundan üks'jäine eländpunkt.
 
 == Eläjad ==
-Vn 2010 kaiken Venäman rahvahanlugemižen mödhe eläjiden lugu oli 20 398 ristitud, rajonan kaks' videndest. Kaikiš suremb lidnan ristitišt om nügüd'. Ortodoksižen hristanuskondan Ph. Mikulai-čudonsädajan pühäpert' (om saudud vll 2003−2005) i islaman mečet' (om saudud vll 1998−2010) oma olmas lidnas.
+Vn 2010 kaiken Venäman rahvahanlugemižen mödhe eläjiden lugu oli 20 398 ristitud, rajonan kaks' videndest. Kaikiš suremb lidnan ristitišt om nügüd'. [[Ortodoksine hristanuskond|Ortodoksižen hristanuskondan]] Ph. Mikulai-čudonsädajan pühäpert' (om saudud vll 2003−2005) i [[islam]]an mečet' (om saudud vll 1998−2010) oma olmas lidnas.
 
 Rahvahad (enamba 1% vl 2010): [[venälaižed]] — 62,9%, [[ukrainalaižed]] — 8,0%, [[totarlaižed]] — 5,5%, [[nencalaižed]] — 4,9%, [[kumikad]] — 1,9%, [[vaugedvenälaižed]] — 1,6%, [[darginalaižed]] — 1,3%, [[baškiralaižed]] — 1,2%, [[azerbaidžanlaižed]] — 1,2%, toižed rahvahad — 10,4%, rahvahuden ozutandata — 1,1%.
+
+== Galerei ==
+<gallery mode="packed" heights="125px">
+Администрация Пуровского района (Ямало-Ненецкий автономный округ).jpg|Puran rajonan administracijan sauvuz (2009)
+Памятник геологам, monument geologist. - panoramio.jpg|Muštnik geologile (2000)
+Панорама завода ЯЛПК.jpg|Jamalan mecanümbriradajan kombinatan ühthine nägu (2019)
+В память о войне 1941 г, in memory about war 1941 - panoramio.jpg|Memorial [[Sur' soda|Suren sodan]] muštoks
+Рейс на Тюмень а-к Ютейр, flight on Tymen UTair - panoramio.jpg|Tarkosalen lendimportan lendahtamižsarg vl 2007
+</gallery>
+
+== Homaičendad ==
+<references />
 
 == Irdkosketused ==
 * [http://www.tsgrad-sob.ru/ Tarkosale-lidnan Ezitajiden Suiman oficialine sait (''tsgrad-sob.ru'').] {{ref-ru}}
