*Empty MediaWiki Message*

--- a/Tarkosale.mw
+++ b/Tarkosale.mw
@@ -14,7 +14,7 @@
  | Avtokod = 89
  | Aigvö = [[UTC]]+5 ([[MSK]]+2)
 }}
-'''Tarkosale''' ([[venäkel'|ven]]., [[totaran kel'|tot]]. i {{lang-uk|Тарко-Сале}}, {{lang-yrk|Талка саля}} znamoičeb «eländpunkt jogiden keskes») om [[Venäma]]n lidn da lidnankund [[Jamalan Nenciden avtonomine ümbrik|Jamalan Nenciden avtonomižen ümbrikon]] päivnouzmas. Se om [[Puran rajon]]an administrativine keskuz.
+'''Tarkosale''' ([[venäkel'|ven]]., [[totaran kel'|tot]]. i {{lang-uk|Тарко-Сале}}, {{lang-yrk|Тарка’ саля}} znamoičeb «eländpunkt jogiden keskes», sijaline {{lang-yrk|Таӆка’ хаӆя}}) om [[Venäma]]n lidn da lidnankund [[Jamalan Nenciden avtonomine ümbrik|Jamalan Nenciden avtonomižen ümbrikon]] päivnouzmas. Se om [[Puran rajon]]an administrativine keskuz.
 
 == Istorii ==
 Eländpunktan aluz om pandud vl 1932 kuti Puran rajonan administrativine keskuz. Vs 1976 elokun 18. päiväspäi oli radnikžilon statusanke.
