--- a/Jean-Joseph_Sanfourche.mw
+++ b/Jean-Joseph_Sanfourche.mw
@@ -1,3 +1,4 @@
+{{Delete|New stub < 1 kB}}
 Jean-Joseph Sanfourche. tal'vku 1929, Bordeaux, Francii — kül'mku 2010, = Saint-Léonard-de-Noblat, Francii) oli francijalaine pirdai da skul'ptor<ref>https://www.oxfordartonline.com/benezit/view/10.1093/benz/9780199773787.001.0001/acref-9780199773787-e-00160422</ref><ref>https://www.ledelarge.fr/5563_artiste_SANFOURCHE_Jean-Joseph</ref><ref>https://www.artbrut.ch/en_GB/author/sanfourche-jean-joseph</ref><ref>https://data.bnf.fr/fr/12698209/jean-joseph_sanfourche/</ref><ref>https://catalogue.bnf.fr/ark:/12148/cb12698209x</ref>.
 
 == Homaičendad ==
