--- a/Nojabr'sk.mw
+++ b/Nojabr'sk.mw
@@ -8,13 +8,13 @@
  | Eläjiden lugu = 106,879
  | Voz' = 2017
  | Pind = 38.84
- | Fail = Noyabrsk teleport.jpg
+ | Fail = Noyabrsk (Lenin St.).jpg
  | Pämez' = Aleksei Romanov<br />(keväz'ku 2016—)
  | Telefonkod = +7-3496-xxx-xxx
  | Avtokod = 89
  | Aigvö = [[UTC]]+5 ([[MSK]]+2)
 }}
-'''Nojabr'sk''' ([[venäkel'|ven]]. i {{lang-tt|Ноябрьск}}, {{lang-uk|Ноябрськ}}, venälaine virkand [nɐˈjabrʲsk]) om [[Venäma]]n lidn da lidnümbrik [[Jamalan Nenciden avtonomine ümbrik|Jamalan Nenciden avtonomižen ümbrikon]] suviröunanno. Se om ümbrikon kahtenz' lidn eläjiden lugun mödhe, om ümbärtud [[Puran rajon]]an territorijal.
+'''Nojabr'sk''' ([[venäkel'|ven]]. i {{lang-tt|Ноябрьск}}, {{lang-uk|Ноябрськ}}, venälaine virkand [nɐˈjabrʲsk], {{lang-yrk|Нюдя Пэвдей марˮ}}, sijaline {{lang-yrk|Нюча пэ”дя”й марˮ}}) om [[Venäma]]n lidn da lidnümbrik [[Jamalan Nenciden avtonomine ümbrik|Jamalan Nenciden avtonomižen ümbrikon]] suviröunanno. Se om ümbrikon kahtenz' lidn eläjiden lugun mödhe, om ümbärtud [[Puran rajon]]an territorijal.
 
 == Istorii ==
 1975. voz' lugetas lidnan oficialižen alusenpanendan vodeks, sen voden sulakul ezmäine desant ištutihe Itujah-jogen ({{lang-ru|Итуяха}}) jäle otmaha Holmogoran [[kivivoi]]n löudmižsijad kävutamižhe. Zavottihe eländpunktan i ''Nojabr'skai-raudtestancijan'' sauvondad vn 1976 [[kül'mku]]s (ven. ''ноябрь'') kuti kivivoin samižen radnikoiden žilo. Nimitihe ''Nojabr'skii-žiloks'' sauvomižen zavodindan kun mödhe. Vn 1978 lopus lendimport (''NOJ / НОЯ'') radaškanzi 8 km päivlaskmha lidnaspäi.
@@ -29,11 +29,23 @@ Klimat om [[ven vö|ven]] terav kontinentaline. Voden keskmäine lämuz om −3,
 Nojabr'sk om lidnümbrikon üks'jäine eländpunkt. Se kogoneb znamoitud projektirujil mikrorajonišpäi (oz., Д-1, И-2, Ц-1, Е, К) i edahaižes Vingapurovskii-mikrorajonaspäi (žilo edel 2004 vot, 80 km päivnouzmha avtotedme pidust' ümbrikoiden röunad). Lidnümbrikon pind — 189,05 km².
 
 == Eläjad ==
-Vn 2010 kaiken Venäman rahvahanlugemižen mödhe eläjiden lugu oli 110 620 ristitud, se oli kaikiš suremb lidnan ristitišt. Ortodoksižen hristanuskondan kaks' jumalanpertid, baptizman pühäpert' i islaman pämečet' (vspäi 2004) oma olmas lidnas.
+Vn 2010 kaiken Venäman rahvahanlugemižen mödhe eläjiden lugu oli 110 620 ristitud, se oli kaikiš suremb lidnan ristitišt. [[Ortodoksine hristanuskond|Ortodoksižen hristanuskondan]] kaks' jumalanpertid, [[baptizm]]an pühäpert' i [[islam]]an pämečet' (vspäi 2004) oma olmas lidnas.
 
 Rahvahad (enamba 0,4% vl 2010): [[venälaižed]] — 65,5%, [[ukrainalaižed]] — 12,3%, [[totarlaižed]] — 6,7%, [[azerbaidžanlaižed]] — 2,9%, [[baškiralaižed]] — 2,3%, [[vaugedvenälaižed]] — 1,5%, [[moldovalaižed]] — 1,1%, [[lezgilaižed]] — 0,6%, [[čuvašalaižed]] — 0,6%, [[uzbekad]] — 0,5%, [[tadžikalaižed]] — 0,4%, [[čečenalaižed]] — 0,4%, [[kirgizlaižed]] — 0,4%, [[kumikad]] — 0,4%, toižed rahvahad — 3,4%, rahvahuden ozutandata — 1,0%.
 
 Nojabr'skan professionaližiden da informacižiden tehnologijoiden kolledž, Jamalan äiprofil'žen kolledžan (Salehard) filial, Nojabr'skan gumanitariž-ekologine institut (Tümenin valdkundaližen universitetan filial) i Nojabr'skan kivivoin da gazan institut Viktor Gorodilovan nimel nimitadud (Tümenin industrialižen universitetan filial) oma opendusen aluzkundoikš, mugažo üläopendusen nell' filialad (Moskv, Tomsk, Novosibirsk, Jekaterinburg). Viž sportkompleksad ratas lidnas.
+
+== Galerei ==
+<gallery mode="packed" heights="125px">
+City center of Noyabrsk.jpg|Te lidnan administracijan sauvusennoks (2006)
+Noyabırsk yamal i nenitski otonom bölgesinin en büyük şehiri rusyanında petrol ve gaz yataklarınında merkezi -62derece sıcaklık by ismail soytekinoğlu - panoramio.jpg|Nojabr'skan pämečet', vn 2008 nägu
+Noyabrsk, Yamal, West Siberia - panoramio.jpg|«[[Sibneft']]»-kompanijan kontor vl 2005
+Noyabrsk teleport.jpg|''Teleport'' — lidnan TV- da radioänetoitandan keskuz (2006)
+Noyabrsk Airport.jpg|Lendimportan terminal vl 2018
+</gallery>
+
+== Homaičendad ==
+<references />
 
 == Irdkosketused ==
 * [http://www.gorod-noyabrsk89.ru/ Lidnan Duman oficialine sait (''gorod-noyabrsk89.ru'').] {{ref-ru}}
