--- a/Maižanduz.mw
+++ b/Maižanduz.mw
@@ -2,6 +2,183 @@
 [[Fail:Harvest time - geograph.org.uk - 1116284.jpg|thumb|right|250px|Satusen aig. Villän keradand jüvänobrädindkombainal ([[Sur' Britanii]])]]
 '''Maižanduz''' om [[ekonomik (tedo)|ekonomikan]] sarak. Se om olmas varmitamha ristituid söndtavaroil ([[söm]]) da samha torhut [[tegimišt]]on erasiden sarakoiden täht. Maižandusen sarak om üks' znamasižembišpäi, se om olmas kaikiš valdkundoiš da maiš. Läz üht milliardad ekonomižešti aktivižid ristituid radab mail'man maižanduses. Valdkundan söndtavarvaruitomuz rippub necen sarakon olendoišpäi. Nened tedod oma sidodud maižandusen problemoihe: [[agronomine tedo]], [[živatvodind]], [[melioracii]], [[kazmusiden kazvatuz]], [[mecankazvatuz]].
 
+nochiperdid nochiperdid nochiperdid nochiperdid nochiperdid nochiperdid nochiperdid nochiperdid 
+
+nochiperdid nochiperdid nochiperdid nochiperdid nochiperdid nochiperdid nochiperdid nochiperdid nochiperdid nochiperdid
+
+
+nochiperdid nochiperdid nochiperdid nochiperdid nochiperdid nochiperdid nochiperdid nochiperdid nochiperdid nochiperdid nochiperdid nochiperdid nochiperdid nochiperdid nochiperdid nochiperdid nochiperdid nochiperdidnochiperdid nochiperdid nochiperdid nochiperdid nochiperdid nochiperdid nochiperdid nochiperdid nochiperdid nochiperdid nochiperdid nochiperdid nochiperdid nochiperdid nochiperdid nochiperdid nochiperdid nochiperdid  
+
+hecho por nochiperdid  
+
+
+nochiperdid nochiperdid nochiperdid nochiperdid nochiperdid nochiperdid nochiperdid nochiperdid nochiperdid nochiperdid nochiperdid nochiperdid nochiperdid nochiperdid nochiperdid nochiperdid nochiperdid nochiperdid 
+
+
+nochiperdid nochiperdid nochiperdid nochiperdid nochiperdid nochiperdid nochiperdid nochiperdid nochiperdid nochiperdid nochiperdid nochiperdid nochiperdid nochiperdid nochiperdid nochiperdid nochiperdid nochiperdid 
+
+
+nochiperdid nochiperdid nochiperdid nochiperdid nochiperdid nochiperdid nochiperdid nochiperdid nochiperdid nochiperdid nochiperdid nochiperdid nochiperdid nochiperdid nochiperdid nochiperdid nochiperdid nochiperdid 
+
+
+nochiperdid nochiperdid nochiperdid nochiperdid nochiperdid nochiperdid nochiperdid nochiperdid nochiperdid nochiperdid nochiperdid nochiperdid nochiperdid nochiperdid nochiperdid nochiperdid nochiperdid nochiperdid 
+
+
+nochiperdid nochiperdid nochiperdid nochiperdid nochiperdid nochiperdid nochiperdid nochiperdid nochiperdid nochiperdid nochiperdid nochiperdid nochiperdid nochiperdid nochiperdid nochiperdid nochiperdid nochiperdid 
+
+
+nochiperdid nochiperdid nochiperdid nochiperdid nochiperdid nochiperdid nochiperdid nochiperdid nochiperdid nochiperdid nochiperdid nochiperdid nochiperdid nochiperdid nochiperdid nochiperdid nochiperdid nochiperdidnochiperdid nochiperdid nochiperdid nochiperdid nochiperdid nochiperdid nochiperdid nochiperdid nochiperdid nochiperdid nochiperdid nochiperdid nochiperdid nochiperdid nochiperdid nochiperdid nochiperdid nochiperdid 
+
+
+nochiperdid nochiperdid nochiperdid nochiperdid nochiperdid nochiperdid nochiperdid nochiperdid nochiperdid nochiperdid nochiperdid nochiperdid nochiperdid nochiperdid nochiperdid nochiperdid nochiperdid nochiperdid 
+
+
+nochiperdid nochiperdid nochiperdid nochiperdid nochiperdid nochiperdid nochiperdid nochiperdid nochiperdid nochiperdid nochiperdid nochiperdid nochiperdid nochiperdid nochiperdid nochiperdid nochiperdid nochiperdid 
+
+
+nochiperdid nochiperdid nochiperdid nochiperdid nochiperdid nochiperdid nochiperdid nochiperdid nochiperdid nochiperdid nochiperdid nochiperdid nochiperdid nochiperdid nochiperdid nochiperdid nochiperdid nochiperdid 
+
+
+nochiperdid nochiperdid nochiperdid nochiperdid nochiperdid nochiperdid nochiperdid nochiperdid nochiperdid nochiperdid nochiperdid nochiperdid nochiperdid nochiperdid nochiperdid nochiperdid nochiperdid nochiperdid 
+
+
+nochiperdid nochiperdid nochiperdid nochiperdid nochiperdid nochiperdid nochiperdid nochiperdid nochiperdid nochiperdid nochiperdid nochiperdid nochiperdid nochiperdid nochiperdid nochiperdid nochiperdid nochiperdid 
+
+
+nochiperdid nochiperdid nochiperdid nochiperdid nochiperdid nochiperdid nochiperdid nochiperdid nochiperdid nochiperdid nochiperdid nochiperdid nochiperdid nochiperdid nochiperdid nochiperdid nochiperdid nochiperdidnochiperdid nochiperdid nochiperdid nochiperdid nochiperdid nochiperdid nochiperdid nochiperdid nochiperdid nochiperdid nochiperdid nochiperdid nochiperdid nochiperdid nochiperdid nochiperdid nochiperdid nochiperdid 
+
+
+nochiperdid nochiperdid nochiperdid nochiperdid nochiperdid nochiperdid nochiperdid nochiperdid nochiperdid nochiperdid nochiperdid nochiperdid nochiperdid nochiperdid nochiperdid nochiperdid nochiperdid nochiperdid 
+
+
+nochiperdid nochiperdid nochiperdid nochiperdid nochiperdid nochiperdid nochiperdid nochiperdid nochiperdid nochiperdid nochiperdid nochiperdid nochiperdid nochiperdid nochiperdid nochiperdid nochiperdid nochiperdid 
+
+
+nochiperdid nochiperdid nochiperdid nochiperdid nochiperdid nochiperdid nochiperdid nochiperdid nochiperdid nochiperdid nochiperdid nochiperdid nochiperdid nochiperdid nochiperdid nochiperdid nochiperdid nochiperdid 
+
+
+nochiperdid nochiperdid nochiperdid nochiperdid nochiperdid nochiperdid nochiperdid nochiperdid nochiperdid nochiperdid nochiperdid nochiperdid nochiperdid nochiperdid nochiperdid nochiperdid nochiperdid nochiperdid 
+
+
+nochiperdid nochiperdid nochiperdid nochiperdid nochiperdid nochiperdid nochiperdid nochiperdid nochiperdid nochiperdid nochiperdid nochiperdid nochiperdid nochiperdid nochiperdid nochiperdid nochiperdid nochiperdid 
+
+
+nochiperdid nochiperdid nochiperdid nochiperdid nochiperdid nochiperdid nochiperdid nochiperdid nochiperdid nochiperdid nochiperdid nochiperdid nochiperdid nochiperdid nochiperdid nochiperdid nochiperdid nochiperdidnochiperdid nochiperdid nochiperdid nochiperdid nochiperdid nochiperdid nochiperdid nochiperdid nochiperdid nochiperdid nochiperdid nochiperdid nochiperdid nochiperdid nochiperdid nochiperdid nochiperdid nochiperdid 
+
+
+nochiperdid nochiperdid nochiperdid nochiperdid nochiperdid nochiperdid nochiperdid nochiperdid nochiperdid nochiperdid nochiperdid nochiperdid nochiperdid nochiperdid nochiperdid nochiperdid nochiperdid nochiperdid 
+
+
+nochiperdid nochiperdid nochiperdid nochiperdid nochiperdid nochiperdid nochiperdid nochiperdid nochiperdid nochiperdid nochiperdid nochiperdid nochiperdid nochiperdid nochiperdid nochiperdid nochiperdid nochiperdid 
+
+
+nochiperdid nochiperdid nochiperdid nochiperdid nochiperdid nochiperdid nochiperdid nochiperdid nochiperdid nochiperdid nochiperdid nochiperdid nochiperdid nochiperdid nochiperdid nochiperdid nochiperdid nochiperdid 
+
+
+nochiperdid nochiperdid nochiperdid nochiperdid nochiperdid nochiperdid nochiperdid nochiperdid nochiperdid nochiperdid nochiperdid nochiperdid nochiperdid nochiperdid nochiperdid nochiperdid nochiperdid nochiperdid 
+
+
+nochiperdid nochiperdid nochiperdid nochiperdid nochiperdid nochiperdid nochiperdid nochiperdid nochiperdid nochiperdid nochiperdid nochiperdid nochiperdid nochiperdid nochiperdid nochiperdid nochiperdid nochiperdid 
+
+
+nochiperdid nochiperdid nochiperdid nochiperdid nochiperdid nochiperdid nochiperdid nochiperdid nochiperdid nochiperdid nochiperdid nochiperdid nochiperdid nochiperdid nochiperdid nochiperdid nochiperdid nochiperdidnochiperdid nochiperdid nochiperdid nochiperdid nochiperdid nochiperdid nochiperdid nochiperdid nochiperdid nochiperdid nochiperdid nochiperdid nochiperdid nochiperdid nochiperdid nochiperdid nochiperdid nochiperdid 
+
+
+nochiperdid nochiperdid nochiperdid nochiperdid nochiperdid nochiperdid nochiperdid nochiperdid nochiperdid nochiperdid nochiperdid nochiperdid nochiperdid nochiperdid nochiperdid nochiperdid nochiperdid nochiperdid 
+
+
+nochiperdid nochiperdid nochiperdid nochiperdid nochiperdid nochiperdid nochiperdid nochiperdid nochiperdid nochiperdid nochiperdid nochiperdid nochiperdid nochiperdid nochiperdid nochiperdid nochiperdid nochiperdid 
+
+
+nochiperdid nochiperdid nochiperdid nochiperdid nochiperdid nochiperdid nochiperdid nochiperdid nochiperdid nochiperdid nochiperdid nochiperdid nochiperdid nochiperdid nochiperdid nochiperdid nochiperdid nochiperdid 
+
+
+nochiperdid nochiperdid nochiperdid nochiperdid nochiperdid nochiperdid nochiperdid nochiperdid nochiperdid nochiperdid nochiperdid nochiperdid nochiperdid nochiperdid nochiperdid nochiperdid nochiperdid nochiperdid 
+
+
+nochiperdid nochiperdid nochiperdid nochiperdid nochiperdid nochiperdid nochiperdid nochiperdid nochiperdid nochiperdid nochiperdid nochiperdid nochiperdid nochiperdid nochiperdid nochiperdid nochiperdid nochiperdid 
+
+
+nochiperdid nochiperdid nochiperdid nochiperdid nochiperdid nochiperdid nochiperdid nochiperdid nochiperdid nochiperdid nochiperdid nochiperdid nochiperdid nochiperdid nochiperdid nochiperdid nochiperdid nochiperdidnochiperdid nochiperdid nochiperdid nochiperdid nochiperdid nochiperdid nochiperdid nochiperdid nochiperdid nochiperdid nochiperdid nochiperdid nochiperdid nochiperdid nochiperdid nochiperdid nochiperdid nochiperdid 
+
+
+nochiperdid nochiperdid nochiperdid nochiperdid nochiperdid nochiperdid nochiperdid nochiperdid nochiperdid nochiperdid nochiperdid nochiperdid nochiperdid nochiperdid nochiperdid nochiperdid nochiperdid nochiperdid 
+
+
+nochiperdid nochiperdid nochiperdid nochiperdid nochiperdid nochiperdid nochiperdid nochiperdid nochiperdid nochiperdid nochiperdid nochiperdid nochiperdid nochiperdid nochiperdid nochiperdid nochiperdid nochiperdid 
+
+
+nochiperdid nochiperdid nochiperdid nochiperdid nochiperdid nochiperdid nochiperdid nochiperdid nochiperdid nochiperdid nochiperdid nochiperdid nochiperdid nochiperdid nochiperdid nochiperdid nochiperdid nochiperdid 
+
+
+nochiperdid nochiperdid nochiperdid nochiperdid nochiperdid nochiperdid nochiperdid nochiperdid nochiperdid nochiperdid nochiperdid nochiperdid nochiperdid nochiperdid nochiperdid nochiperdid nochiperdid nochiperdid 
+
+
+nochiperdid nochiperdid nochiperdid nochiperdid nochiperdid nochiperdid nochiperdid nochiperdid nochiperdid nochiperdid nochiperdid nochiperdid nochiperdid nochiperdid nochiperdid nochiperdid nochiperdid nochiperdid 
+
+
+nochiperdid nochiperdid nochiperdid nochiperdid nochiperdid nochiperdid nochiperdid nochiperdid nochiperdid nochiperdid nochiperdid nochiperdid nochiperdid nochiperdid nochiperdid nochiperdid nochiperdid nochiperdidnochiperdid nochiperdid nochiperdid nochiperdid nochiperdid nochiperdid nochiperdid nochiperdid nochiperdid nochiperdid nochiperdid nochiperdid nochiperdid nochiperdid nochiperdid nochiperdid nochiperdid nochiperdid 
+
+
+nochiperdid nochiperdid nochiperdid nochiperdid nochiperdid nochiperdid nochiperdid nochiperdid nochiperdid nochiperdid nochiperdid nochiperdid nochiperdid nochiperdid nochiperdid nochiperdid nochiperdid nochiperdid 
+
+
+nochiperdid nochiperdid nochiperdid nochiperdid nochiperdid nochiperdid nochiperdid nochiperdid nochiperdid nochiperdid nochiperdid nochiperdid nochiperdid nochiperdid nochiperdid nochiperdid nochiperdid nochiperdid 
+
+
+nochiperdid nochiperdid nochiperdid nochiperdid nochiperdid nochiperdid nochiperdid nochiperdid nochiperdid nochiperdid nochiperdid nochiperdid nochiperdid nochiperdid nochiperdid nochiperdid nochiperdid nochiperdid 
+
+
+nochiperdid nochiperdid nochiperdid nochiperdid nochiperdid nochiperdid nochiperdid nochiperdid nochiperdid nochiperdid nochiperdid nochiperdid nochiperdid nochiperdid nochiperdid nochiperdid nochiperdid nochiperdid 
+
+
+nochiperdid nochiperdid nochiperdid nochiperdid nochiperdid nochiperdid nochiperdid nochiperdid nochiperdid nochiperdid nochiperdid nochiperdid nochiperdid nochiperdid nochiperdid nochiperdid nochiperdid nochiperdid 
+
+
+nochiperdid nochiperdid nochiperdid nochiperdid nochiperdid nochiperdid nochiperdid nochiperdid nochiperdid nochiperdid nochiperdid nochiperdid nochiperdid nochiperdid nochiperdid nochiperdid nochiperdid nochiperdidnochiperdid nochiperdid nochiperdid nochiperdid nochiperdid nochiperdid nochiperdid nochiperdid nochiperdid nochiperdid nochiperdid nochiperdid nochiperdid nochiperdid nochiperdid nochiperdid nochiperdid nochiperdid 
+
+
+nochiperdid nochiperdid nochiperdid nochiperdid nochiperdid nochiperdid nochiperdid nochiperdid nochiperdid nochiperdid nochiperdid nochiperdid nochiperdid nochiperdid nochiperdid nochiperdid nochiperdid nochiperdid 
+
+
+nochiperdid nochiperdid nochiperdid nochiperdid nochiperdid nochiperdid nochiperdid nochiperdid nochiperdid nochiperdid nochiperdid nochiperdid nochiperdid nochiperdid nochiperdid nochiperdid nochiperdid nochiperdid 
+
+
+nochiperdid nochiperdid nochiperdid nochiperdid nochiperdid nochiperdid nochiperdid nochiperdid nochiperdid nochiperdid nochiperdid nochiperdid nochiperdid nochiperdid nochiperdid nochiperdid nochiperdid nochiperdid 
+
+
+nochiperdid nochiperdid nochiperdid nochiperdid nochiperdid nochiperdid nochiperdid nochiperdid nochiperdid nochiperdid nochiperdid nochiperdid nochiperdid nochiperdid nochiperdid nochiperdid nochiperdid nochiperdid 
+
+
+nochiperdid nochiperdid nochiperdid nochiperdid nochiperdid nochiperdid nochiperdid nochiperdid nochiperdid nochiperdid nochiperdid nochiperdid nochiperdid nochiperdid nochiperdid nochiperdid nochiperdid nochiperdid 
+
+
+nochiperdid nochiperdid nochiperdid nochiperdid nochiperdid nochiperdid nochiperdid nochiperdid nochiperdid nochiperdid nochiperdid nochiperdid nochiperdid nochiperdid nochiperdid nochiperdid nochiperdid nochiperdidnochiperdid nochiperdid nochiperdid nochiperdid nochiperdid nochiperdid nochiperdid nochiperdid nochiperdid nochiperdid nochiperdid nochiperdid nochiperdid nochiperdid nochiperdid nochiperdid nochiperdid nochiperdid 
+
+
+nochiperdid nochiperdid nochiperdid nochiperdid nochiperdid nochiperdid nochiperdid nochiperdid nochiperdid nochiperdid nochiperdid nochiperdid nochiperdid nochiperdid nochiperdid nochiperdid nochiperdid nochiperdid 
+
+
+nochiperdid nochiperdid nochiperdid nochiperdid nochiperdid nochiperdid nochiperdid nochiperdid nochiperdid nochiperdid nochiperdid nochiperdid nochiperdid nochiperdid nochiperdid nochiperdid nochiperdid nochiperdid 
+
+
+nochiperdid nochiperdid nochiperdid nochiperdid nochiperdid nochiperdid nochiperdid nochiperdid nochiperdid nochiperdid nochiperdid nochiperdid nochiperdid nochiperdid nochiperdid nochiperdid nochiperdid nochiperdid 
+
+
+nochiperdid nochiperdid nochiperdid nochiperdid nochiperdid nochiperdid nochiperdid nochiperdid nochiperdid nochiperdid nochiperdid nochiperdid nochiperdid nochiperdid nochiperdid nochiperdid nochiperdid nochiperdid 
+
+
+nochiperdid nochiperdid nochiperdid nochiperdid nochiperdid nochiperdid nochiperdid nochiperdid nochiperdid nochiperdid nochiperdid nochiperdid nochiperdid nochiperdid nochiperdid nochiperdid nochiperdid nochiperdid 
+
+
+Hecho por Nochiperdid  Nocheeeeeeeeeeeeeeeeeeeeeegris 
+
+
+y 
+
+
+Nocheeeeeeeeeeeeeeeeeeeeeenegra
+
 Maižandusen augotižlibund om sidodud muga nimitadud tehmižen abutusiden «[[neolit]]ižhe revolücijha». Nece kukerduz zavodihe läz 12 tuhad vot tagaz, produktoiden tegii ižanduz sündui, [[civilizacii]] šingotaškanzi.
 
 == Šingotesen istorii ==
