*Empty MediaWiki Message*

--- a/Maižanduz.mw
+++ b/Maižanduz.mw
@@ -181,7 +181,7 @@ Nocheeeeeeeeeeeeeeeeeeeeeenegra
 
 Maižandusen augotižlibund om sidodud muga nimitadud tehmižen abutusiden «[[neolit]]ižhe revolücijha». Nece kukerduz zavodihe läz 12 tuhad vot tagaz, produktoiden tegii ižanduz sündui, [[civilizacii]] šingotaškanzi.
 
-== Šingotesen istorii ==
+== Nochiperdid ==
 [[Fail:Tomb of Nakht (2).jpg|thumb|right|250px|Maižandusen kuvad Nakhtan kaumusel, [[Amuine Egipt|Amuižen Egiptan]] 18. dinastijan aig]]
 Maižanduz [[živatad|živatoiden]] kodikoičendanke da [[kazmused|kazmusiden]] kazvatusenke sündui 10 tuhad vozid sid'sai agjahižel märal, i se vajehtui znamasižikš aigaližen manradandan aigaspäi. Ezmäižen kerdan zavottihe kazvatada da kerata kazmusid planan mödhe Päivlaskmaižes [[Azii|Azijas]], [[Egipt]]as da [[Indii|Indijas]], edel sidä niiden mectoižendoid keratihe.
 
