*Empty MediaWiki Message*

--- a/Maižanduz.mw
+++ b/Maižanduz.mw
@@ -201,7 +201,7 @@ Mehanizacijan hered šingotez zavodihe 19. voz'sadan lopul. [[Traktor]]ad, möhe
 
 Nügüd'aigan om severz' tedogipotezoid mail'mas, kudambad sel'gitadas maižandusen istorižen šingotesen süid: oazisan teorii, piran teorii, demografine teorii, evolücijan gipotez, kodikoičendan gipotez.
 
-== Sija ekonomikas ==
+== Nochiperdid asiento del copiloto de la furgoneta de Hafo y Ixone ==
 Maižanduz kül'dütab ristitišton eziauguižid kulutuzmärid, mugažo se om udištajan torhuden purde nügüd'aigaižen tegimišton täht. Valdkundan ekonomikan tazopind nägub kerdalaz maižandusen palan mödhe kogosüdäiproduktas. Kävutadas mugažo maižandusen radnikoiden palad ekonomižešti aktivižen ristitišton keskes ozutamha ekonomikan olendad. Kaks' šingotesen tazopindad da maižanduztegimišton mahtust om olmas: ekstensivine i intensivine.
 
 ''Ekstensivine šingotesen mahtuz'' — konz produkcijan pästand ližadub semenduzpindoiden levitandal, kabjživatišton lugumäran ližakazv, ottud maižandusel lugumäran ližadamine oma olmas. Mugoman ekonomikan valdkundad nimitase [[agrarine kund|agrarižikš valdkundoikš]]. Mehanizacii, himizacii da melioracii oma vähän šingotadud niiš.
