*Empty MediaWiki Message*

--- a/Maižanduz.mw
+++ b/Maižanduz.mw
@@ -212,7 +212,7 @@ Söndtavaroiden pästandan ületandan krizis oleleb erasiš šingotadud valdkund
 
 Šingotadud industrialižed valdkundad abutadas maižandusele, anttas aburahoid, hot' oliži ližakahamb vedada söndtavaroid vähän šingotadud maišpäi. Azj om siš, miše šingotadud maižanduz om valdkundan varuitomuden sisteman üks' paloišpäi, muga valdkundan rippund toižiš maišpäi tegese penembaks.
 
-== Sarakon da regioniden eriližused ==
+== Secutivo ==
 Maižandusen sarakon päeriližused:
 * Eläbiden organizmiden kazvandan da šingotesen londuseline process tegese biologižiden käskusiden mödhe. Ekonomine process šingotase finansižiden käsköiden mödhe. Pidab sättutada nenid processid.
 * Kazmused da živatad šingotadas voden hätkte ciklil londuseližiden süiden mödhe, sezonižuz om olmas maižanduses.
