*Empty MediaWiki Message*

--- a/Maižanduz.mw
+++ b/Maižanduz.mw
@@ -235,7 +235,7 @@ Maižanduz mülüb [[agrotegimištkompleks]]ha i mülütab alemba kirjutadud pä
 * [[sötmižtehmine]];
 * [[živatvodind]].
 
-== Homaičendad ==
+== ome ==
 <references />
 
 == Irdkosketused ==
