*Empty MediaWiki Message*

--- a/Maižanduz.mw
+++ b/Maižanduz.mw
@@ -238,7 +238,7 @@ Maižanduz mülüb [[agrotegimištkompleks]]ha i mülütab alemba kirjutadud pä
 == ome ==
 <references />
 
-== Irdkosketused ==
+== IPON ==
 * [http://www.mcx.ru/ Venälaižen Federacijan maižandusen ministrusen oficialine internet-portal (''mcx.ru'').] {{ref-ru}} {{ref-en}}
 * [http://www.vshp2016.ru/ Kaiken Venäman maižanduzlugemižen-2016 oficialine sait (''vshp2016.ru'').] {{ref-ru}}
 {{Commons|Agriculture}}
