--- a/Salehard.mw
+++ b/Salehard.mw
@@ -1,7 +1,7 @@
 {{Eländpunkt
  | Nimi = Salehard<br />[[venäkel'|ven.:]] Салехард<br />[[nenecan kel'|nenec.:]] Сăля' харăд<br />[[hantin kel'|hant. šuriš.:]] Пуӆңават<br />[[komin kel'|komi:]] Обдор
  | Lidnanznam = Coat of Arms of Salekhard (Yamal Nenetsia).png
- | Flag = Flag of Salekhard (Yamal Nenetsia).png
+ | Flag = Flag of Salekhard (Yamal Nenetsia).svg
  | Lidnanznam text = Salehardan lidnanznam
  | Flag text = Salehardan flag
  | Valdkund = Venäma
@@ -14,7 +14,6 @@
  | Avtokod = 89
  | Aigvö = [[UTC]]+5 ([[MSK]]+2)
 }}
-[[Fail:Salehardtown1.jpg|thumb|left|250px|Lidnan kirjišt Jamal-sildan Fakel-restorananke sildan härgan päl tagamal. Sild om saudud Šaitank-joges päliči.]]
 '''Salehard''' ([[venäkel'|ven]]. i {{lang-tt|Салехард}}, {{lang-yrk|Сăля' харăд}} «lidn nemel», {{lang-kca|Пуӆңават}}, {{lang-kv|Обдор}} «Obin rand») om [[Venäma]]n lidn da lidnümbrik valdkundan pohjoižes. Se om [[Jamalan Nenciden avtonomine ümbrik|Jamalan Nenciden avtonomižen ümbrikon]] administrativine keskuz, ümbrikon koumanz' lidn eläjiden lugun mödhe. Om ümbärtud [[Uralanveren rajon]]an territorijal.
 
 == Istorii ==
@@ -35,6 +34,23 @@ Vn 2010 kaiken Venäman rahvahanlugemižen mödhe lidnan eläjiden lugu oli 42 5
 Rahvahad (enamba 0,6% vl 2010): [[venälaižed]] — 61,3%, [[totarlaižed]] — 8,5%, [[ukrainalaižed]] — 5,8%, [[hantilaižed]] — 3,1%, [[nencalaižed]] — 2,8%, [[komi-ziränilaižed]] — 2,6%, [[kirgizlaižed]] — 1,0%, [[saksalaižed]] — 0,8%, [[vaugedvenälaižed]] — 0,7%, [[kumikad]] — 0,6%, [[čuvašalaižed]] — 0,6%, [[baškiralaižed]] — 0,6%, toižed rahvahad — 5,8%, rahvahuden ozutandata — 5,8%.
 
 Jamalan polärine agroekonomine tehnikum i Jamalan äiprofil'ne kolledž oma professionaližen opendusen aluzkundoikš.
+
+== Galerei ==
+<gallery mode="packed" heights="125px">
+Городская администрация (Салехард) - panoramio.jpg|Lidnan administracijan sauvuz (2013)
+Салехард - panoramio (4).jpg|Obin i Uralmägiden nägu lidnaspäi
+Salaehardpetrpavel.jpg|Phh. Pedroin da Pauloin päjumalanpert', vn 2012 nägu
+Мечеть, Салехард - panoramio.jpg|Lidnan «Nurd-Kamal»-mečet', vn 2013 nägu
+Headquarters of "Yamalneftegaz".jpg|«Jamalneftegaz»-edheotandan päfater («[[LUKOIL]]»-kompanijan pala)
+Shemanovsky museum and exhibition complex (3).jpg|Muzei da ozutelendkeskuz I. Šemanovskijan nimed (2015)
+Школа искусств, Салехард, ул. Республики, 40 - panoramio.jpg|Čomamahtoiden škol
+Salehardtown1.jpg|Nacionaline kirjišt Jamal-sildan Fakel-restorananke sildan härgan päl tagamal. Sild om saudud Šaitank-joges päliči
+Салехард. Пристань - panoramio.jpg|Jogivaldmad (2013)
+Salahardaeroport.jpg|Salehard-lendimportan sauvused vl 2012
+</gallery>
+
+== Homaičendad ==
+<references />
 
 == Irdkosketused ==
 * [http://duma.salekhard.org/ Lidnan Duman oficialine sait (''duma.salekhard.org'').] {{ref-ru}}
