--- a/Salehard.mw
+++ b/Salehard.mw
@@ -41,10 +41,12 @@ Jamalan polärine agroekonomine tehnikum i Jamalan äiprofil'ne kolledž oma pro
 Салехард - panoramio (4).jpg|Obin i Uralmägiden nägu lidnaspäi
 Salaehardpetrpavel.jpg|Phh. Pedroin da Pauloin päjumalanpert', vn 2012 nägu
 Мечеть, Салехард - panoramio.jpg|Lidnan «Nurd-Kamal»-mečet', vn 2013 nägu
-Headquarters of "Yamalneftegaz".jpg|«Jamalneftegaz»-edheotandan päfater («[[LUKOIL]]»-kompanijan pala)
+Headquarters of "Yamalneftegaz".jpg|«Jamalneftegaz»-edheotandan päfater («[[LUKOIL]]»-kompanijan pala) vl 2015
+Yamal Airlines Headquarters.jpg|«Jamal»-aviakompanijan päfater i «Ob'»-adivpert' vl 2015
 Shemanovsky museum and exhibition complex (3).jpg|Muzei da ozutelendkeskuz I. Šemanovskijan nimed (2015)
 Школа искусств, Салехард, ул. Республики, 40 - panoramio.jpg|Čomamahtoiden škol
 Salehardtown1.jpg|Nacionaline kirjišt Jamal-sildan Fakel-restorananke sildan härgan päl tagamal. Sild om saudud Šaitank-joges päliči
+Salekhard District Center of National Cultures (7).jpg|Ümbrikon rahvahiden kul'turoiden keskuz (ezimal) i ümbrikon administracijan sauvuz (vižžiruine, 2015)
 Салехард. Пристань - panoramio.jpg|Jogivaldmad (2013)
 Salahardaeroport.jpg|Salehard-lendimportan sauvused vl 2012
 </gallery>
