--- a/Uz'_Urengoi.mw
+++ b/Uz'_Urengoi.mw
@@ -35,6 +35,15 @@ Rahvahad (enamba 1% vl 2010): [[venälaižed]] — 64,1%, [[ukrainalaižed]] —
 
 Uden Urengoin äiprofil'ne kolledž<ref>[http://www.nurmk.yanao.ru/ Uden Urengoin äiprofil'žen kolledžan sait (''nurmk.yanao.ru'').] {{ref-ru}}</ref> i privatine «Gazprom Tehnikum Uz' Urengoi»<ref>[http://www.ntgp.edu.ru/ «Gazprom Tehnikum Uz' Urengoi»-aluzkundan sait (''ntgp.edu.ru'').] {{ref-ru}}</ref> oma professionaližen opendusen aluzkundoikš. Viž sportkompleksad ratas lidnas.
 
+== Galerei ==
+<gallery mode="packed" heights="125px">
+Town Hall (Novy Urengoy).jpg|Lidnan administracijan sauvuz (2015)
+Epiphany Cathedral (Novy Urengoy).jpg|Sündun nägundan päjumalanpert', vn 2015 nägu
+O9Yn6Lyp0A.jpg|«Gazprom Dobiča Urengoi»-edheotandan kontor vl 2017
+U991iXJF0Lg.jpg|«Gazprom Tehnikum Uz' Urengoi» (2017)
+LYdntFu4lzY.jpg|Uz' Urengoi-päraudtestancii vl 2017
+</gallery>
+
 == Homaičendad ==
 <references />
 
