--- a/Uz'_Urengoi.mw
+++ b/Uz'_Urengoi.mw
@@ -41,6 +41,7 @@ Town Hall (Novy Urengoy).jpg|Lidnan administracijan sauvuz (2015)
 Epiphany Cathedral (Novy Urengoy).jpg|Sündun nägundan päjumalanpert', vn 2015 nägu
 O9Yn6Lyp0A.jpg|«Gazprom Dobiča Urengoi»-edheotandan kontor vl 2017
 U991iXJF0Lg.jpg|«Gazprom Tehnikum Uz' Urengoi» (2017)
+Уренгойская ГРЭС.jpg|Urengoin GRES vl 2017
 LYdntFu4lzY.jpg|Uz' Urengoi-päraudtestancii vl 2017
 </gallery>
 
