--- a/Aleksandrovsk_Sahalinal.mw
+++ b/Aleksandrovsk_Sahalinal.mw
@@ -8,7 +8,7 @@
  | Eläjiden lugu = 9,504
  | Voz' = 2018
  | Pind = 22
- | Fail = Anton Chekhov monument Alexandrovsk-Sakhalinsky file 2.jpg
+ | Fail = Александровск-Сахалинский, ул. Кондрашкина, 7 (1).jpg
  | Pämez' = Vladimir Il'<br />(viluku 2018—)
  | Telefonkod = +7-42434-xx-xxx
  | Avtokod = 65
@@ -24,12 +24,24 @@ Lidn šingotase kivihilen samižel i sömtegimištol (leibänkombinat, kalanpüd
 == Geografijan andmused ==
 Lidn sijadase Tünen valdmeren [[Tataran sal'm]]en pohjoižpäivnouzmaižel randal, 31 m ü.m.t. keskmäižel korktusel. Matkad [[Suvisahalinsk]]hasai om 440 km suvhe orhal vai 550 km avtotel. Lähembaižed lidnad om [[Poronaisk]] i [[Uglegorsk (Sahalinan agj)|Uglegorsk]] 200 km suvhe orhal. Avtote ühtenzoitab lidnad lähembaiženke Timovskoje-raudtestancijanke ({{lang-ru|Тымовское}}), se om 60 km päivnouzmha.
 
-13 žilod mülüdas lidnümbrikho Aleksandrovskan Sahalinal ližaks. Lidnümbrikon pind — 4 777,4 km².
+Kaik 13 žilod mülüdas lidnümbrikho Aleksandrovskan Sahalinal ližaks. Lidnümbrikon pind — 4 777,4 km².
 
 == Eläjad ==
 Vn 2010 Venäman rahvahanlugemižen mödhe lidnan eläjiden lugu oli 10 613 ristitud, lidnümbrikon — 13 404 ristitud. Kaikiš suremb lidnan ristitišt oli 24 905 eläjad vl 1939 i 19 400 eläjad vl 1992. Vl 2018 kaik 11 143 ristitud elädas lidnümbrikos. [[Ortodoksine hristanuskond|Ortodoksižen hristanuskondan]] Pühän Jumalanmaman Katken jumalanpert' om udessaudud vll 1993−2012.
 
 Professionaližen opendusen aluzkundad: Sahalinan bazižen medicinižen kolledžan filial i Sahalinan valdkundaližen universitetan filial.
+
+== Galerei ==
+<gallery mode="packed" heights="125px">
+Администрация Александровск-Сахалинского района 1.jpg|Rajonan-lidnümbrikon administracijan sauvuz (2016)
+Церковь Покрова Пресвятой Богородицы в Александровск-Сахалинске.jpg|Pühän Jumalanmaman Katken jumalanpert', vn 2011 nägu
+Медицинский колледж в Александровск-Сахалинске.jpg|Sahalinan bazižen medicinižen kolledžan filial (2005)
+Anton Chekhov monument Alexandrovsk-Sakhalinsky file 2.jpg|Monument [[Anton Čehov]]an muštoks
+Дом Чехова А.П.jpg|[[Anton Čehov]]an muzei (2018)
+</gallery>
+
+== Homaičendad ==
+<references />
 
 == Irdkosketused ==
 * [http://www.aleks-sakh.ru/ Lidnan da lidnümbrikon tobmuden aluzkundoiden oficialine sait (''aleks-sakh.ru'').] {{ref-ru}}
