--- a/Aniv_(lidn).mw
+++ b/Aniv_(lidn).mw
@@ -1,6 +1,6 @@
 {{Eländpunkt
  | Nimi = Aniv<br />Анива
- | Lidnanznam = Coat of Arms of Anivsky rayon (Sakhalinskaya oblast).gif
+ | Lidnanznam = Aniva COA (2011).gif
  | Flag = Flag of Aniva (Sakhalin oblast).png
  | Lidnanznam text = Anivan lidnanznam
  | Flag text = Anivan flag
@@ -26,6 +26,16 @@ Lidn sijadase Lütog-jogen molembil randoil ({{lang-ru|Лютога}}) läz sen 
 
 == Eläjad ==
 Vn 2010 Venäman rahvahanlugemižen mödhe lidnan eläjiden lugu oli 9 115 ristitud, lidnümbrikon pol'. Kaikiš suremb lidnan ristitišt om nügüd'. [[Ortodoksine hristanuskond|Ortodoksižen hristanuskondan]] ph. Serafim Sarovalaine-čudonsädajan jumalanpert' (vspäi 1994) i [[baptizm]]an «Blagodat'»-pühäpert' oma olmas lidnas.
+
+== Galerei ==
+<gallery mode="packed" heights="125px">
+Lyutoga river.jpg|Lütog-jogi lidnan sildaspäi (2011)
+Aniva 01.jpg|«Blagodat'»-pühäpert' (baptizm), vn 2011 nägu
+Трасса бывшей Железной дороги в Аниве.jpeg|Enččen raudten pudotez lidnas vl 2012
+</gallery>
+
+== Homaičendad ==
+<references />
 
 == Irdkosketused ==
 * [http://aniva.admsakhalin.ru/ Lidnan da lidnümbrikon tobmuden aluzkundoiden oficialine sait (''aniva.admsakhalin.ru'').] {{ref-ru}}
