--- a/Dolinsk.mw
+++ b/Dolinsk.mw
@@ -8,13 +8,13 @@
  | Eläjiden lugu = 11,765
  | Voz' = 2018
  | Pind = 11
- | Fail = Sakhalin Railway Dolinsk 3.jpg
+ | Fail = Sakhalin Railway Dolinsk 6.jpg
  | Pämez' = Aleksandr Tugarev<br />(sügüz'ku 2016—)
  | Telefonkod = +7-42442-xx-xxx
  | Avtokod = 65
  | Aigvö = [[UTC]]+11 (MSK+8)
 }}
-'''Dolinsk''' ({{lang-ru|Долинск}}, {{lang-ja|ドリンスク}} ''Dorinsku'', edel 1946 vot — {{lang-ja|落合}} ''Otiai'') om [[Venäma]]n lidn [[Sahalinan agj]]an [[Sahalin]]-saren suves. Se om [[Dolinskan lidnümbrik]]on administrativine keskuz (edel 2006 vot — rajonan).
+'''Dolinsk''' ({{lang-ru|Долинск}}, {{lang-ja|ドリンスク}} ''Dorinsku'', edel 1946. vot — {{lang-ja|落合}} ''Otiai'') om [[Venäma]]n lidn [[Sahalinan agj]]an [[Sahalin]]-saren suves. Se om [[Dolinskan lidnümbrik]]on administrativine keskuz (edel 2006. vot — rajonan).
 
 == Istorii ==
 Eländpunktan aluz om pandud [[Venäman imperii|Venäman imperijha]] ''Galkino-Vrasskoje-žiloks'' elänzoitmaha tahondad [[ainalaižed|ainalaižiden]] külidenno vl 1884 ''Naibuči-kaičendsodapostan'' sijas (tetihe vspäi 1867). Vozil 1905−1945 oli [[Japonii|Japonijan]] palaks, šingotihe cellülozbumagaižel fabrikal. Vl 1911 raudte ühtenzoiti žilod [[Suvisahalinsk|Tojoharanke]]. Sai lidnan statusad vl 1946, sirtihe sihe kükstud mehid tobjimalaz. [[Nevondkundaline Ühtištuz|NSTÜ:n]] aigan tehtihe äi erazvuittušt bumagad tegimel, oludtegim i maidtegim radoiba.
@@ -26,6 +26,15 @@ Lidn sijadase Naib-jogen ({{lang-ru|Найба}}, ainan kelel: ''Naibuči'') i s
 
 == Eläjad ==
 Vn 2010 Venäman rahvahanlugemižen mödhe lidnan eläjiden lugu oli 12 200 ristitud, lidnümbrikon pol'. Kaikiš suremb lidnan ristitišt oli 15 000 eläjad vl 1967 i 15 900 eläjad vl 1992. [[Ortodoksine hristanuskond|Ortodoksižen hristanuskondan]] Jumalanmaman Emäganpäivän puine pühäpert' om saudud vl 2010.
+
+== Galerei ==
+<gallery mode="packed" heights="125px">
+Памятник Ленину+.jpg|[[Vladimir Lenin]]an muštpacaz lidnan torgul (2007)
+Sakhalin Railway Dolinsk 3.jpg|Dolinsk-päraudtestancijan sauvuz vl 2016
+</gallery>
+
+== Homaičendad ==
+<references />
 
 == Irdkosketused ==
 * [http://dolinsk.admsakhalin.ru/ Lidnan da lidnümbrikon tobmuden aluzkundoiden oficialine sait (''dolinsk.admsakhalin.ru'').] {{ref-ru}}
