--- a/Aniv_(lidn).mw
+++ b/Aniv_(lidn).mw
@@ -32,6 +32,7 @@ Vn 2010 Venäman rahvahanlugemižen mödhe lidnan eläjiden lugu oli 9 115 risti
 Lyutoga river.jpg|Lütog-jogi lidnan sildaspäi (2011)
 Aniva 01.jpg|«Blagodat'»-pühäpert' (baptizm), vn 2011 nägu
 Трасса бывшей Железной дороги в Аниве.jpeg|Enččen raudten pudotez lidnas vl 2012
+Маяк Анива.jpg|Anivan majak vl 2017
 </gallery>
 
 == Homaičendad ==
