--- a/Holmsk.mw
+++ b/Holmsk.mw
@@ -8,13 +8,13 @@
  | Eläjiden lugu = 27,954
  | Voz' = 2018
  | Pind = 32
- | Fail = Гавань торгового порта Холмска.JPG
+ | Fail = Гора Спамберг.JPG
  | Pämez' = Andrei Suhomesov<br />(keväz'ku 2016—)
  | Telefonkod = +7-42433-xx-xxx
  | Avtokod = 65
  | Aigvö = [[UTC]]+11 (MSK+8)
 }}
-'''Holmsk''' ({{lang-ru|Холмск}}, {{lang-ja|ホルムスク}} ''Horumusku'', edel 1946 vot — ''Maok'', {{lang-ja|真岡}} ''Maoka'') om [[Venäma]]n lidn [[Sahalinan agj]]an [[Sahalin]]-saren suvipäivlaskmas. Se om agjan koumanz' lidn eläjiden lugun mödhe, [[Holmskan lidnümbrik]]on (edel 2006 vot — rajonan) administrativine keskuz.
+'''Holmsk''' ({{lang-ru|Холмск}}, {{lang-ja|ホルムスク}} ''Horumusku'', edel 1946. vot — ''Maok'', {{lang-ja|真岡}} ''Maoka'') om [[Venäma]]n lidn [[Sahalinan agj]]an [[Sahalin]]-saren suvipäivlaskmas. Se om agjan koumanz' lidn eläjiden lugun mödhe, [[Holmskan lidnümbrik]]on (edel 2006. vot — rajonan) administrativine keskuz.
 
 == Istorii ==
 Eländpunktan aluz om pandud Venäman imperijha ''Mauk''-kaičendsodapostaks ({{lang-ru|Маука}}) vn 1870 21. päiväl semendkud [[ainalaižed|ainalaižiden]] amuižen penen külän sijas. Nimitihe külän mödhe, šingotihe merikalanpüdandal i [[laminarii|merikapustan]] kazvatandal. Vll 1905−1945 udesnimitadud ''Maok'' oli Japonijan palaks [[Venälaiž-japonine soda|sodan]] rezul'tataks, om lidnan statusanke vspäi 1922. [[Toine mail'man soda|Suren sodan]] aigan Rusked Armii anasti lidnad vn 1945 20. päiväl elokud. Udesnimitihe mererandaližiden kukhiden mödhe.
@@ -30,6 +30,23 @@ Lidn jagase 7 mikrorajonha territorialižešti. 23 žilod mülüdas lidnümbrikh
 Vn 2010 Venäman rahvahanlugemižen mödhe lidnan eläjiden lugu oli 30 937 ristitud, lidnümbrikon koume nelländest. Kaikiš suremb lidnan ristitišt oli 51 800 eläjad vl 1992. [[Ortodoksine hristanuskond|Ortodoksižen hristanuskondan]] koume jumalanpertid om olmas lidnas.
 
 Professionaližen opendusen aluzkundad: Sahalinan saraktehnologijoiden da holitusen tehnikum, Sahalinan ülämeriškol.
+
+== Galerei ==
+<gallery mode="packed" heights="125px">
+Администрация Холмского городского округа.JPG|Holmskan lidnümbrikon administracijan sauvuz (2012)
+Храм Николая Чудотворца (Холмск).JPG|Ph. Mikulai-čudonsädajan jumalanpert' (ortodoksine hristanuskond), vn 2012 nägu
+СахМП (офис в Холмске).JPG|Sahalinan meripurulaivišton ofis vl 2012
+Холмский СРЗ.jpg|Laivankohenduztegim vl 2012
+ЦРДК (Холмск).JPG|Kul'turkeskuz (2012)
+Холмская ЦРБ.JPG|Keskuzläžundkodi (2012)
+Стадион «Маяк Сахалина» (Холмск).jpg|«Sahalinan majak»-stadion (2012)
+Плавательный бассейн (Холмск).JPG|Ujundbassein (2012)
+Холмск-Северный.JPG|Holmsk-Pohjoine-raudtestancii vl 2012
+Гавань торгового порта Холмска.JPG|Torguindportan merikar vl 2012
+</gallery>
+
+== Homaičendad ==
+<references />
 
 == Irdkosketused ==
 * [http://sobranie-kholmsk.ru/ Lidnan da lidnümbrikon Nevondkundan oficialine sait (''sobranie-kholmsk.ru'').] {{ref-ru}}
