--- a/Korsakov_(lidn).mw
+++ b/Korsakov_(lidn).mw
@@ -8,13 +8,14 @@
  | Eläjiden lugu = 33,203
  | Voz' = 2018
  | Pind = 26
- | Fail = Korsakov, Sakhalin oblast.JPG
+ | Fail = Korsakov view 2017.jpg
  | Pämez' = Timur Maginskii<br />(sügüz'ku 2017—)
  | Telefonkod = +7-42435-xx-xxx
  | Avtokod = 65
  | Aigvö = [[UTC]]+11 (MSK+8)
 }}
-'''Korsakov''' ({{lang-ru|Корса́ков}}, {{lang-ja|コルサコフ}} ''Korusakofu'', edel 1946 vot — {{lang-ja|大泊}} ''Ootomari'') om [[Venäma]]n lidn da meriport [[Sahalinan agj]]an [[Sahalin]]-saren suves. Se om agjan kahtenz' lidn eläjiden lugun mödhe, Korsakovan lidnümbrikon (edel 2006 vot — rajonan) administrativine keskuz.
+[[Fail:Korsakov zoning map of 2018.jpg|thumb|right|250px|Lidnansauvomižen zonoiden kart (2018)]]
+'''Korsakov''' ({{lang-ru|Корса́ков}}, {{lang-ja|コルサコフ}} ''Korusakofu'', edel 1946. vot — {{lang-ja|大泊}} ''Ootomari'') om [[Venäma]]n lidn da meriport [[Sahalinan agj]]an [[Sahalin]]-saren suves. Se om agjan kahtenz' lidn eläjiden lugun mödhe, Korsakovan lidnümbrikon (edel 2006. vot — rajonan) administrativine keskuz.
 
 == Istorii ==
 Japonižed purtked mainitadas ''Kusunkotan-žilod'' ({{lang-ja|久春古丹}}) vspäi 1679. Nügüdläižen eländpunktan aluz om pandud [[Venäman imperii|Venäman imperijha]] ''Muravjovskii-kaičendsodapostaks'' vn 1853 4. päiväl redukud, [[ainalaižed|ainalaižiden]] ''Tomari-Aniv-külän'' sijas ({{lang-ru|Томари-Анива}}). Se oli imperijan ezmäine eländpunkt sarel. Evakuiruihe postad Kriman sodan zavodindan tagut vl 1854 i panihe alusen tošti vl 1869 kuti ''Korsakovskii-sodapost''. Molembad nimitused sünduiba [[Päivnouzmaine Sibir'|Päivnouzmaižen Sibirin]] jenaral-gubernatoriden kanzannimišpäi. Šingotihe katargan sijaks. Vll 1905−1945 udesnimitadud ''Otomari:kš'' žilo oli Japonijan palaks [[Venälaiž-japonine soda|sodan]] rezul'tataks. [[Toine mail'man soda|Suren sodan]] aigan Rusked Armii anasti lidnad vn 1945 16. päiväl elokud. Om lidnan statusanke vspäi 1946. Edel 2006 vot lidn alištui agjan tobmudele oikti.
@@ -34,6 +35,15 @@ Rahvahad (2010): [[venälaižed]] — 86,4%, [[korejalaižed]] — 6,1%, [[ukrai
 Professionaližen opendusen aluzkundad:
 * Sahalinan tegimištoliž-ekonomižen tehnikuman filial;
 * Sahalinan valdkundaližen universitetan Politehnižen kolledžan filial.
+
+== Galerei ==
+<gallery mode="packed" heights="125px">
+Museum of Korsakov.jpg|Kodirandantedištandmuzei (2013)
+Coast near Korsakov and LNG plant.JPG|Londuseližen gazan nozoltai tegim vl 2011
+Порт Корсаков 2016-06.jpg|Korsakov-portan ofis vl 2016
+Korsakov, Sakhalin oblast.JPG|Lidnan meriport vl 2011
+Станция Корсаков.jpg|Korsakov-raudtestancii vl 2012
+</gallery>
 
 == Homaičendad ==
 <references />
