--- a/Korsakov_(lidn).mw
+++ b/Korsakov_(lidn).mw
@@ -14,7 +14,7 @@
  | Avtokod = 65
  | Aigvö = [[UTC]]+11 (MSK+8)
 }}
-[[Fail:Korsakov zoning map of 2018.jpg|thumb|right|250px|Lidnansauvomižen zonoiden kart (2018)]]
+[[Fail:Korsakov zoning map of 2018.jpg|thumb|left|250px|Lidnansauvomižen zonoiden kart (2018)]]
 '''Korsakov''' ({{lang-ru|Корса́ков}}, {{lang-ja|コルサコフ}} ''Korusakofu'', edel 1946. vot — {{lang-ja|大泊}} ''Ootomari'') om [[Venäma]]n lidn da meriport [[Sahalinan agj]]an [[Sahalin]]-saren suves. Se om agjan kahtenz' lidn eläjiden lugun mödhe, Korsakovan lidnümbrikon (edel 2006. vot — rajonan) administrativine keskuz.
 
 == Istorii ==
@@ -39,9 +39,9 @@ Professionaližen opendusen aluzkundad:
 == Galerei ==
 <gallery mode="packed" heights="125px">
 Museum of Korsakov.jpg|Kodirandantedištandmuzei (2013)
-Coast near Korsakov and LNG plant.JPG|Londuseližen gazan nozoltai tegim vl 2011
-Порт Корсаков 2016-06.jpg|Korsakov-portan ofis vl 2016
 Korsakov, Sakhalin oblast.JPG|Lidnan meriport vl 2011
+Порт Корсаков 2016-06.jpg|Korsakov-portan ofis vl 2016
+Coast near Korsakov and LNG plant.JPG|Londuseližen gazan nozoltai tegim vl 2011
 Станция Корсаков.jpg|Korsakov-raudtestancii vl 2012
 </gallery>
 
